--- a/spring-boot-server/buildspec.yml
+++ b/spring-boot-server/buildspec.yml
@@ -6,19 +6,16 @@ phases:
       java: openjdk11
   pre_build:
     commands:
-      - cd ..
-      - TEST=$(git describe --exact-match $CODEBUILD_RESOLVED_SOURCE_VERSION)
-      - echo $TEST
       - echo Logging in to Amazon ECR...
-      # - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-  # build:
-  #   commands:
-  #     - echo Build started on `date`
-  #     - mvn install -Dmaven.test.skip=true
-  #     - echo Building the Docker image...          
-  #     - docker build -t $IMAGE_REPO_URL:$IMAGE_TAG .
-  # post_build:
-  #   commands:
-  #     - echo Build completed on `date`
-  #     - echo Pushing the Docker image...
-  #     - docker push $IMAGE_REPO_URL:$IMAGE_TAG
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+  build:
+    commands:
+      - echo Build started on `date`
+      - mvn install -Dmaven.test.skip=true
+      - echo Building the Docker image...          
+      - docker build -t $IMAGE_REPO_URL:$CODEBUILD_RESOLVED_SOURCE_VERSION .
+  post_build:
+    commands:
+      - echo Build completed on `date`
+      - echo Pushing the Docker image...
+      - docker push $IMAGE_REPO_URL:$CODEBUILD_RESOLVED_SOURCE_VERSION
