--- a/spring-boot-server/buildspec.yml
+++ b/spring-boot-server/buildspec.yml
@@ -11,6 +11,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - cd spring-boot-server
       - mvn install -Dmaven.test.skip=true
       - echo Building the Docker image...          
       - docker build -t $IMAGE_REPO_URL:$CODEBUILD_RESOLVED_SOURCE_VERSION .
