--- a/angular-14-client/Dockerfile
+++ b/angular-14-client/Dockerfile
@@ -1,3 +1,3 @@
-FROM nginx:alpine
+FROM public.ecr.aws/nginx/nginx:stable-alpine-perl
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY /dist/angular-14-crud-example /usr/share/nginx/html
