--- a/spring-boot-server/buildspec.yml
+++ b/spring-boot-server/buildspec.yml
@@ -15,8 +15,11 @@ phases:
       - mvn install -Dmaven.test.skip=true
       - echo Building the Docker image...          
       - docker build -t $IMAGE_REPO_URL:$CODEBUILD_RESOLVED_SOURCE_VERSION .
+      - docker tag $IMAGE_REPO_URL:$CODEBUILD_RESOLVED_SOURCE_VERSION $IMAGE_REPO_URL:latest
+
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $IMAGE_REPO_URL:$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - docker push $IMAGE_REPO_URL:latest
