--- a/angular-14-client/buildspec.yml
+++ b/angular-14-client/buildspec.yml
@@ -14,11 +14,12 @@ phases:
     commands:
       - echo Build started on `date`
       - cd angular-14-client
+      - VERSION=$(cat VERSION)
       - npm install && ng build
       - echo Building the Docker image...          
-      - docker build -t $IMAGE_REPO_URL:$ENV-$CODEBUILD_RESOLVED_SOURCE_VERSION .
+      - docker build -t $IMAGE_REPO_URL:$VERSION .
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push $IMAGE_REPO_URL:$ENV-$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - docker push $IMAGE_REPO_URL:$VERSION
