--- a/spring-boot-server/buildspec.yml
+++ b/spring-boot-server/buildspec.yml
@@ -12,12 +12,13 @@ phases:
     commands:
       - echo Build started on `date`
       - cd spring-boot-server
+      - VERSION=$(cat VERSION)
       - mvn install -Dmaven.test.skip=true
       - echo Building the Docker image...          
-      - docker build -t $IMAGE_REPO_URL:$ENV-$CODEBUILD_RESOLVED_SOURCE_VERSION .
+      - docker build -t $IMAGE_REPO_URL:$VERSION .
 
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push $IMAGE_REPO_URL:$ENV-$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - docker push $IMAGE_REPO_URL:$VERSION
